LMS/force-app/main/default/objects/Securities__c/Securities__c.object-meta.xml
<CustomObject>
    <label>Security</label>
    <nameField>
        <label>Security Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>