LMS/force-app/main/default/objects/Securities__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Securities</relationshipLabel>
    <relationshipName>Securities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>