LMS/force-app/main/default/objects/Securities__c/fields/SecurityVal_ue__c.field-meta.xml
<CustomField>
    <fullName>SecurityVal_ue__c</fullName>
    <label>Security Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>